--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -17,7 +17,8 @@
 		-ms-transform: none !important;
 		transform: none !important;
 		opacity: 1 !important;
-		color: #cec2c2;
+		color: black;
+		
 	}
 
 /* Wrapper */
