--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,9 +22,9 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	color: #c3c1c7;
+	color: #0980b3;
 	vertical-align: baseline;
-	background-color: purple;
+	background-color: rgb(18, 17, 18);
 
 }
 	
@@ -105,7 +105,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background: #0b0122;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -204,8 +204,8 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #070707, #0e0e0e);
+				background-image: -webkit-linear-gradient(to right, #0f0f10, hsl(300, 7%, 6%));
 				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
 				background-image: linear-gradient(to right, #5e42a6, #b74e91);
 				-moz-transition: max-width 0.2s ease;
@@ -1838,11 +1838,11 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease;
 		-ms-transition: border-color 0.2s ease;
 		transition: border-color 0.2s ease;
-		background-color: transparent;
+		background-color: white;
 		border: solid 1px !important;
 		border-color: rgba(255, 255, 255, 0.15) !important;
 		border-radius: 3em;
-		color: #ffffff !important;
+		color: #12a4be !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.6em;
@@ -1873,8 +1873,8 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease, -webkit-transform 0.2s ease;
 			-ms-transition: opacity 0.2s ease, -ms-transform 0.2s ease;
 			transition: opacity 0.2s ease, transform 0.2s ease;
-			background: #ffffff;
-			border-radius: 3em;
+			background: #d90c0c;
+			border-radius: 2em;
 			content: '';
 			height: 100%;
 			left: 0;
@@ -3243,31 +3243,31 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #161517;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #161617;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #121212;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #151517;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #0e0e0f;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #111111;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #080808;
 		}
 
 		.wrapper.fullscreen {
@@ -3377,7 +3377,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #474646;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
